<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockScissorsPaper</string>
    <string name="action_settings">Settings</string>
    
    <string name="create_game_label" >创建游戏</string>
    <string name="my_ip_label" >你的IP是：</string>
    <string name="defaut_ip" >0.0.0.0</string>
    <string name="refresh_ip" >刷新IP</string>
    <string name="wifi_host_waiting" >等待其他玩家加入</string>
    <string name="wifi_connect_time_out" >链接超时</string>
    <string name="join_game_label" >加入游戏</string>
    <string name="opponent_ip_label" >请输入创建游戏的IP：</string>
    <string name="connecting" >正在连接</string>
    <string name="main_game" >石头剪子布</string>
    
    <string name="rock_paper_scissors" >石头剪子布</string>
    <string name="rock_paper_scissors_descroption" >请选择你需要出的手势：</string>
    <string name="rock" >石头</string>
    <string name="paper" >布</string>
    <string name="scissors" >剪刀</string>
    <string name="ok" >确定</string>
    <string name="no_choose_warning" >请选择你需要出的手势之后再点确定</string>
    <string name="result_waitting" >等待对手出手</string>
    <string name="result_draw" >平了</string>
    <string name="result_win" >你赢了</string>
    <string name="result_lose" >你输了</string>
    <string name="result_my_choise" >你出的是：%s</string>
    <string name="result_opponent_choise" >对手出的是：%s</string>
    <string name="result_label_format" >第%1$d局</string>
    <string name="total_result_label" >总比分</string>
    <string name="total_result_format" >胜：%1$d 平：%2$d 负：%3$d </string>
    <string name="punch_error" >程序出错啦，请重新出拳</string>
    
    <string name="opponent_not_choise" >你的对手没有出手</string>
    <string name="connect_lose" >链接断开</string>
    
</resources>
