<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rockscissorspaper.WelcomeActivity"
    tools:ignore="MergeRootFrame"
    android:id="@+id/wifi_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opponent_ip_label" />

        <EditText
            android:id="@+id/host_ip"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/defaut_ip"
            android:textAppearance="?android:attr/textAppearanceLarge" >

        </EditText>

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/join_game_label"  
            android:onClick="onJoinGame"/>

    </LinearLayout>


</FrameLayout>
